--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/apagar.js" defer></script>
+    <script src="./js/atualizar.js"></script>
     <script src="./js/carregar.js" defer></script>
 
     <title>Epic Task</title>
